Ayush | Done some UI changes for mobile

--- a/crowdsource-ui/src/assets/css/card.css
+++ b/crowdsource-ui/src/assets/css/card.css
@@ -17,6 +17,9 @@
         position: relative !important;
         margin-top: 2rem;
     }
+    .card {
+        min-height: 190px !important;
+    }
 }
 
 @media (min-width: 992px) {
