--- a/crowdsource-ui/src/views/common/buttons/back-btn/back-btn.ejs
+++ b/crowdsource-ui/src/views/common/buttons/back-btn/back-btn.ejs
@@ -4,7 +4,7 @@
         <span class="material-icons" style="vertical-align:sub">
 arrow_back
 </span>
-        <span><%= __('Back') %></span>
+        <span class="back-text"><%= __('Back') %></span>
 
     </a>
 </button>
