--- a/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
+++ b/crowdsource-ui/src/views/common/virtualKeyboard/virtualKeyboard.ejs
@@ -9,5 +9,14 @@
         <div class="simple-keyboard d-none"></div>
     </div>
 </div>
+<div class="row no-data-found justify-content-center d-none" id="wrong-language">
+    <div class="col-12 col-md-12 col-lg-8">
+        <div class="row d-flex justify-content-center">
+            <div class="col-11 col-md-9 col-lg-9 no-data-found-text"><span>
+                                <%- __('Typing language is wrong. Please type in selected language') %>
+                            </span></div>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 <script src="../../js/common/virtualKeyboard.js"></script>
