--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
@@ -41,20 +41,26 @@
                     <div class="col-5 col-lg-5 col-xl-4 d-none" id="nav-bar-loader">
                         <div><span class="spinner"></span></div>
                     </div>
-                    <div class="col-lg-10 pt-2">
+                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 pt-2 px-0">
                         <div class="row m-0">
-                        <label class="col-2 text-right mt-2"><%= __('FROM ') %>:</label>
-                        <select class="col-4 btn dropdown-toggle h6 w-90 rounded" id="from-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
-
-                        </select>
-                        <div class="col-1"></div>
-                        <label class="col-1 text-right mt-2"><%= __('TO ') %>:</label>
-                        <select class="col-4 btn dropdown-toggle h6 w-90 rounded" id="to-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
-                        </select>
-                        </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 p-0">
+                                <div class="row m-0">
+                                    <label class="col-4 mt-2 from-label"><%= __('FROM ') %>:</label>
+                                    <select class="col-8 btn dropdown-toggle h6 w-90 rounded" id="from-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
+            
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 p-0">
+                                <div class="row m-0">
+                                    <label class="col-4 mt-2 from-label"><%= __('TO ') %>:</label>
+                                    <select class="col-8 btn dropdown-toggle h6 w-90 rounded" id="to-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
+                                    </select>
+                                </div>
+                            </div>
                     </div>
                 </div>
-            </nav>
+            </div></nav>
         </div>
     </div>
     <div class="m-auto row justify-content-center mt-lg-4 mx-lg-5">
