--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5" id="translation-row">
+            <div class="row m-0 justify-content-center mb-5 mb-lg-0 mt-5" id="translation-row">
                 <div class="col-lg-4 col-md-5 col-12 original-text">
                     <label id="from-label"><%- __('HINDI') %></label>
                     <div id="original-text">
@@ -54,7 +54,7 @@
                     <textarea class="form-control" id="translate-text" rows="3" style="resize:none"></textarea>
                 </div>
             </div>
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none" id="editor-row">
+            <div class="row m-0 justify-content-center mb-5 mb-lg-0 d-none no-margin-mobile" id="editor-row">
                 <div class="form-group col-lg-8 col-md-8 col-12 m-0 p-0" id="textarea-row">
                     <div class="form-group col-lg-12 col-md-5 col-12 m-0 edit-text" id="edit-text" style="border-radius:12px">
                         <label><%- __('YOUR EDIT') %></label>
