--- a/crowdsource-ui/src/views/common/header/headerWithoutNavBar.ejs
+++ b/crowdsource-ui/src/views/common/header/headerWithoutNavBar.ejs
@@ -7,7 +7,7 @@
         </a>
         <div class="version-beta">Beta</div>
     </div>
-    <div class="row ml-4 border-left">
+    <div class="row ml-4 border-left d-none-mob">
         <p class="m-0" style="padding-right:21px;padding-left:20px"><%= __(MODULE) %></p>
         <p class="m-0" style="color:#ea913f"><%= __(PAGE_TITLE) %></p>
     </div>
