--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thankyou.css
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thankyou.css
@@ -97,6 +97,10 @@
         width: 150px;
         height: auto;
     }
+    .top-back-btn {
+        top: 80px;
+        left: 20px;
+       }
 }
 
 @media screen and (max-width: 599px) {
