--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -36,16 +36,21 @@
         </h1>
     </div>
 
-    <div class="row mb-5 lazy mb-lg-0">
-        <div class="col-lg-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
+    <div class="row lazy">
+        <div class="col-lg-12 col-md-11 col-lg-11 p-5 ml-lg-auto thankyou-page">
             <div class="row m-0">
                 <div class="col-2"></div>
-                <div class="col-lg-3 col-md-3 col-sm-6 pl-0">
+                <div class="col-lg-3 col-md-3 col-sm-6 pl-0 web-view">
                     <h4 class="h4 my-3 font-weight-normal text-right">
                         <%= __('Your language and top 3 most contributed languages') %>
                     </h4>
                 </div>
-                <div class="col-lg-6 col-md-9 col-sm-6 border-left">
+                <div class="col-lg-3 col-md-3 col-sm-6 pl-0 mobile-view">
+                    <h4 class="h4 my-3 font-weight-normal text-center">
+                        <%= __('Your language pair and top 3 most contributed language pairs') %>
+                    </h4>
+                </div>
+                <div class="col-lg-6 col-md-9 col-sm-6 thankyou-bar-graph">
                     <div id="bar_charts_container">
                         <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                             <div><span class="spinner"></span></div>
