--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css" integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../../css/sunoIndia/record.css">
-    <link rel="stylesheet" type="text/css" href="../../css/validator-prompt.css">
     <link rel="stylesheet" type="text/css" href="../../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../../css/validator-prompt.css">
     <link rel="stylesheet" type="text/css" href="../../css/mic-speaker-testing.css">
     <style>.btn.focus,.btn:focus{outline:0;box-shadow:0 0}</style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
@@ -47,7 +47,12 @@
                     <audio id="my-audio" controls tabindex="-1" src="" type="audio/wav" controlslist="nodownload" crossorigin="anonymous" class="pointer-event"></audio>
                 </div>
             </div>
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1" id="editor-row">
+            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1 web-view" id="editor-row">
+                <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0 text-area" id="edit-text-suno">
+                    <textarea disabled="disabled" class="form-control edit-area" id="edit" rows="3" placeholder="Start typing here..." style="font-size:32px;resize:none"></textarea>
+                </div>
+            </div>
+            <div class="row justify-content-center mb-3 mb-lg-0 mt-5 mx-1 mobile-view" id="editor-row">
                 <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0 text-area" id="edit-text-suno">
                     <textarea disabled="disabled" class="form-control edit-area" id="edit" rows="3" placeholder="Start typing here..." style="font-size:32px;resize:none"></textarea>
                 </div>
@@ -93,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center mb-lg-7 mb-md-7 mb-sm-1 mx-5 mt-5" id="validation-button-row">
+            <div class="row justify-content-center mb-lg-7 mb-md-7 mb-sm-1 mx-5 mt-5 web-view" id="validation-button-row">
                 <div class="col-lg-8 col-md-8 flex-lg-row flex-md-row flex-column d-flex d-flex flex-row flex-wrap flex-lg-nowrap flex-md-nowrap justify-content-around mt-2">
                     <button class="w-100 btn align-self-start mb-2" disabled="disabled" id="cancel-edit-button">
                         <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -129,7 +134,43 @@
                     </button>
                 </div>
             </div>
-            <div class="row justify-content-center" id="skip_btn_row">
+
+            <div class="row mobile-view" id="validation-button-row">
+                <div class="row m-0 w-100">
+                    <div class="col-4"></div>
+                    <div class="col-4 text-center">
+                        <div id="audio-player-btn">
+                            <div class="audioplayer">
+                                <img src="../../img/play.svg" alt="play" id="play" class="cursor-pointer" height="48" width="48"> 
+                                <img src="../../img/pause.svg" height="48" width="48" alt="pause" id="pause" class="d-none cursor-pointer"> 
+                                <img src="../../img/replay.svg" height="48" width="48" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4"></div>
+                    </div>
+                    <div class="row w-100 m-0 px-3">
+                            <button class="w-100 btn my-3 btn-link-primary" disabled="disabled" id="cancel-edit-button">
+                                        <%= __('Cancel') %>
+                            </button>
+                    </div>
+                    <div class="row justify-content-center mx-2" id="loader-play-btn">
+                        <div><span class="spinner w-h-5"></span></div>
+                    </div>
+                    <div class="row w-100 m-0 px-3">
+                        <button class="btn my-2 w-100 btn-link-primary" disabled="disabled" id="submit-edit-button">
+                           
+                                    <%= __('Submit') %>
+                        </button>
+                    </div>
+                    <div class="row justify-content-center" id="skip_btn_row">
+                        <button class="btn text-primary mb-2" id="skip_button">
+                            <%= __('Skip') %>
+                        </button>
+                    </div>
+            </div>
+            </div>
+            <div class="row justify-content-center web-view" id="skip_btn_row">
                 <button class="btn text-primary mt-2 mb-2 fs-1_5-rem" id="skip_button">
                     <%= __('Skip') %>
                 </button>
@@ -165,7 +206,7 @@
         <script src="../../js/common/speakerTesting.js"></script>
 
     </div>
-</div>
+
 
 
 </body>
