Ayush | Fix issue of playing audio in mobile devices

--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -137,9 +137,9 @@
                     <div class="col-4 text-center">
                         <div id="audio-player-btn">
                             <div class="audioplayer">
-                                <img src="../../img/play.svg" alt="play" id="play" class="cursor-pointer" height="48" width="48"> 
-                                <img src="../../img/pause.svg" height="48" width="48" alt="pause" id="pause" class="d-none cursor-pointer"> 
-                                <img src="../../img/replay.svg" height="48" width="48" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer">
+                                <img src="../../img/play.svg" alt="play" id="play_mob" class="cursor-pointer" height="48" width="48"> 
+                                <img src="../../img/pause.svg" height="48" width="48" alt="pause" id="pause_mob" class="d-none cursor-pointer"> 
+                                <img src="../../img/replay.svg" height="48" width="48" alt="replay" id="replay_mob" class="d-none justify-self-center cursor-pointer">
                             </div>
                         </div>
                     </div>
