Ayush | Fix issue for id not working on mobile view

--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -36,7 +36,7 @@
                 <%- include ../common/speakerTesting.ejs %>
             </div>
             <%- include('../common/assistiveText.ejs',{msg:"Is the translation correct?"}) %>
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5" id="translation-row">
+            <div class="row m-0 justify-content-center mb-5 mb-lg-0 mt-5" id="translation-row">
                 <div class="col-lg-4 col-md-5 col-12 original-text">
                     <label id="from-label"><%- __('HINDI') %></label>
                     <div id="original-text">
