--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -43,14 +43,9 @@
                     <audio id="my-audio" controls tabindex="-1" src="" type="audio/wav" controlslist="nodownload" crossorigin="anonymous" class="pointer-event"></audio>
                 </div>
             </div>
-            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1 web-view" id="editor-row">
+            <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1" id="editor-row">
                 <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0 text-area" id="edit-text-suno">
                     <textarea disabled="disabled" class="form-control edit-area" id="edit" rows="3" placeholder="Start typing here..." style="font-size:32px;resize:none"></textarea>
-                </div>
-            </div>
-            <div class="row justify-content-center mb-3 mb-lg-0 mt-5 mx-1 mobile-view" id="editor-row">
-                <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0 text-area" id="edit-text-suno">
-                    <textarea disabled="disabled" class="form-control edit-area" id="edit" rows="3" placeholder="Start typing here..." maxlength="1000" style="font-size:32px;resize:none"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center d-none" id="thankyou-text">
@@ -146,7 +141,7 @@
                     <div class="col-4"></div>
                     </div>
                     <div class="row w-100 m-0 px-3">
-                            <button class="w-100 btn my-3 btn-link-primary" disabled="disabled" id="cancel-edit-button">
+                            <button class="w-100 btn my-3 btn-link-primary" disabled="disabled" id="cancel-edit-button_mob">
                                         <%= __('Cancel') %>
                             </button>
                     </div>
@@ -154,7 +149,7 @@
                         <div><span class="spinner w-h-5"></span></div>
                     </div>
                     <div class="row w-100 m-0 px-3">
-                        <button class="btn my-2 w-100 btn-link-primary" disabled="disabled" id="submit-edit-button">
+                        <button class="btn my-2 w-100 btn-link-primary" disabled="disabled" id="submit-edit-button_mob">
                            
                                     <%= __('Submit') %>
                         </button>
