| Priyanshu |fix dekhoIndia ocr bg image

--- a/crowdsource-ui/src/views/common/image-container/dekhoImageBox.css
+++ b/crowdsource-ui/src/views/common/image-container/dekhoImageBox.css
@@ -1,7 +1,7 @@
 .image-container{
-    border:1px dashed rgb(0,0,0,.2);
+    border:1px solid rgb(0,0,0,.2);
     padding:30px;
     border-radius:12px;
-    background-image: url(../../img/dekhoBgImg.png);
+    background-image: url(../../img/dekhoBgImg.svg);
     background-repeat: repeat;
     }
