Ayush | Fix mobile view suno button issue

--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -126,11 +126,11 @@
                 </div>
             </div>
 
-            <div class="row mobile-view" id="validation-button-row">
+            <div class="row mobile-view" id="validation-button-row_mob">
                 <div class="row m-0 w-100">
                     <div class="col-4"></div>
                     <div class="col-4 text-center">
-                        <div id="audio-player-btn">
+                        <div id="audio-player-btn_mob">
                             <div class="audioplayer">
                                 <img src="../../img/play.svg" alt="play" id="play_mob" class="cursor-pointer" height="48" width="48"> 
                                 <img src="../../img/pause.svg" height="48" width="48" alt="pause" id="pause_mob" class="d-none cursor-pointer"> 
