Ayush | Fix skip button issue in suno validation

--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -180,8 +180,8 @@
                     </button>
                 </div>
 
-                <div class="row mobile-view w-100 m-0" id="skip_btn_row">
-                    <button class="btn text-primary mb-2 w-100" id="skip_button">
+                <div class="row mobile-view w-100 m-0" id="skip_btn_row_mob">
+                    <button class="btn text-primary mb-2 w-100" id="skip_button_mob">
                         <%= __('Skip') %>
                     </button>
                 </div>
