--- a/crowdsource-ui/src/views/common/languageNavBar/languageNavBar.ejs
+++ b/crowdsource-ui/src/views/common/languageNavBar/languageNavBar.ejs
@@ -2,7 +2,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white px-4" id="contribution_lang_navbar">
         <div class="mx-2">
             <%= __('Select the language for voluntary contribution') %>:
-        </div><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedLanguage" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedLanguage" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedLanguage">
             <div class="col-5 col-lg-5 col-xl-4" id="nav-bar-loader">
                 <div><span class="spinner"></span></div>
@@ -19,9 +20,7 @@
             </ul>
             <ul class="navbar-nav text-primary cursor-pointer">
                 <li class="nav-item mx-2 mx-lg-4 options">
-                    <div id="Show_all_language" data-toggle="modal" data-target="#language-pop-up-wrapper" class="cursor-pointer">
-                        <%= __('Show All') %>
-                    </div>
+                    <div id="Show_all_language" data-toggle="modal" data-target="#language-pop-up-wrapper" class="cursor-pointer"><%= __('Show All') %></div>
                 </li>
             </ul>
         </div>
