--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="google-site-verification" content="WzZdl_-Ka4oElzowGxq3Y8knBPs31AOHFnEqSUtjGFU">
     <meta name="description" content="Bolo India: A crowdsourcing initiative for Indian languages. A speech recognition product, that will be as Indian, as you and I. It will also be free of cost for every Indian. Make it happen by donating your voice">
-    <meta property="og:title" content="<%= __('Bolo India: A crowdsourcing initiative for Indian languages')%>">
+    <meta property="og:title" content="<%= __('Bolo India: A crowdsourcing initiative for Indian languages') %>">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="<%= __('I\'ve contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?')%>">
+    <meta property="og:description" content="<%= __('I\'ve contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?') %>">
     <meta property="og:site_name" content="Bolo India ">
     <meta property="og:url" content="https://boloindia.nplt.in">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
@@ -58,9 +58,7 @@
                     </ul>
                     <ul class="navbar-nav text-primary cursor-pointer">
                         <li class="nav-item mx-2 mx-lg-4 options">
-                            <div id="Show_all_language" data-toggle="modal" data-target="#language-pop-up-wrapper" class="cursor-pointer">
-                                <%= __('Show All') %>
-                            </div>
+                            <div id="Show_all_language" data-toggle="modal" data-target="#language-pop-up-wrapper" class="cursor-pointer"><%= __('Show All') %></div>
                         </li>
                     </ul>
                 </div>
