Ayush | Fix issue for mobile view in SUNO

--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -154,8 +154,8 @@
                                     <%= __('Submit') %>
                         </button>
                     </div>
-                    <div class="row justify-content-center" id="skip_btn_row">
-                        <button class="btn text-primary mb-2" id="skip_button">
+                    <div class="row justify-content-center" id="skip_btn_row_mob">
+                        <button class="btn text-primary mb-2" id="skip_button_mob">
                             <%= __('Skip') %>
                         </button>
                     </div>
