--- a/crowdsource-ui/src/views/common/assistiveText/assistiveText.css
+++ b/crowdsource-ui/src/views/common/assistiveText/assistiveText.css
@@ -3,3 +3,9 @@
     font-style:italic;
     font-size: 18px;
 }
+
+@media (max-width: 768px) {
+    .instructive-msg-div{
+        font-size: 16px;
+    }
+}
