--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -72,13 +72,10 @@
                     <p>
                         <%- __('We do not have any data in <span id="spn-validation-language"></span> language. Please try again later.') %>
                     </p>
-                    <p>
-                        <%= __('Would you also like to contribute your voice?') %>
-                    </p>
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-                            <a class="btn btn-primary text-white btn-lg h6 w-100">
-                                <%- __('Start Contributing in <span id="start-validation-language"></span>') %>
+                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="./home.html">
+                                <%- __('Back to SunoIndia Home') %>
                             </a></div>
                     </div>
                 </div>
